# ai_coding_workshop

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: RULES.md
examples/: sample_log.txt  sample_report.html
log-compliance-checker/: README.md  requirements.txt
log-compliance-checker/prompts/: AGENT_SETUP.md  agent_runner.py  agent_system_prompt.md  check_request_template.md
log-compliance-checker/rules/: example_rules.yaml  schema.md
log-compliance-checker/src/: checker.py  models.py  parser.py  rules_engine.py
log-compliance-checker/tests/: test_rules_engine.py
specs/: gcu_p.yaml
src/loginspect/: __init__.py  aggregate.py  model.py  specgen.py
src/loginspect/cli/: __init__.py  main.py
src/loginspect/parsers/: __init__.py  base.py  snapshot_text.py
src/loginspect/report/: __init__.py  renderers.py
src/loginspect/rules/: __init__.py  checks.py  engine.py  spec.py
templates/: README.md  params_GCU-P_260611_7_8_0.xlsm  washtable_GCU-P.xlsx
tests/: conftest.py  test_aggregate.py  test_checks.py  test_cli.py  test_parser.py  test_specgen.py
