[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loginspect"
version = "0.1.0"
description = "Rules-driven log reviewer for embedded device telemetry"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["log", "telemetry", "validation", "embedded", "spec"]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "openpyxl>=3.1",
]

[project.scripts]
loginspect = "loginspect.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/loginspect"
Issues = "https://github.com/your-org/loginspect/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
# Inline CSS/HTML template strings legitimately exceed the line limit.
"src/loginspect/report/renderers.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
packages = ["loginspect"]
ignore_missing_imports = true
warn_unused_ignores = true
